src/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: "BitcountGridSingle-Medium";
    src: url("./fonts/BitcountGridSingle-Medium.woff2") format(woff2);
    font-weight: normal;
    font-style: normal;
}

h1 {
    margin-top: 20px;
    color: rgba(247, 230, 2, 1);
    font-size: 3rem;
}

nav {
    width: 100%;
    background-color: rgba(0, 0, 139, 0.800);
    height: auto;
    text-align: center;
    backdrop-filter: blur(5px);
    box-shadow: 0 0 6px 2px rgb(0, 0, 139);
}

body {
    display: flex;
    font-family: "BitcountGridSingle-Medium", sans-serif;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-image: url("./images/ice.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    height: 100vh;
    
}

form {
    margin-top: 50px;
}

input[type="search"]{
    font-family: "BitcountGridSingle-Medium", sans-serif;
    width: 15.5rem;
    padding-left: 10px;
    height: 2.5rem;
    background-color: rgba(0, 0, 139, 0.600);
    color:  rgba(247, 230, 2, 1);
    border-radius:10px 5px 5px 10px;
    box-shadow: 0 0 6px 2px rgb(0, 0, 139);
    backdrop-filter: blur(5px);
    font-size: 1rem;
    border: none;
}

::placeholder {
    color: rgba(247, 230, 2, 0.600);
}

input:focus {
    background-color: rgba(0, 0, 139, 0.800);
    color: rgba(247, 230, 2, 1);
}

p {
    color: rgba(247, 230, 2, 1);
}

input[type="submit"] {
    height: 2.5rem;
    width: 4rem;
    margin-left: 5px;
    background-image:url('data:image/svg+xml,<svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M11 6C13.7614 6 16 8.23858 16 11M16.6588 16.6549L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="%23f7e602" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg>');
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 5px 10px 10px 5px;
    background-color: rgba(0, 0, 139, 0.600);
     box-shadow: 0 0 6px 2px rgb(0, 0, 139);
     backdrop-filter: blur(5px);
    border: none;
    cursor: pointer;
}

input[type="submit"]:hover {
    background-color: rgba(0, 0, 139, 0.800);
}


#container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 20px;
    width: 21rem;
    height: auto;
    background-color: rgba(0, 0, 139, 0.600);
    border-radius: 10px;
    backdrop-filter: blur(5px);
    box-shadow: 0 0 6px 2px rgb(0, 0, 139);
}

#weather-info  {
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center;
    width: 500px;
    height: auto;
}


#temp {
    font-size: 3.5em;


}


#temp sup {


    font-size: 0.6em;
    position: relative;
    top: 0.1em;
}




sup {


    font-size: 0.8em;
    position: relative;
    top: 0.2em;
}


.info {
    font-size: 1.2rem;
    margin-top: 5px;
    margin-bottom: 5px;
}


#temp-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 5px;
    margin-right: 5px;
    box-shadow: 0 0 6px 2px rgba(0, 0, 139, 0.400);
    border-radius: 5px;
    gap: 1rem;

}

.spinner {
    border: 6px solid rgba(255, 255, 255, 0.3);
    border-top: 6px solid rgba(0, 0, 139, 0.500);
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 1s linear infinite;
    margin: 1rem auto;
    display: block;
}

.hidden {
    display: none;
}

@keyframes spin {
 to {
    transform: rotate(360deg);
 }  
}

